--- a/backend/sellmate/src/main/resources/application.properties
+++ b/backend/sellmate/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=sellmate
-spring.datasource.url=jdbc:sqlserver://BERKHP:1433;sellmate=sellmate
-spring.datasource.password=berk
-spring.datasource.username=berk
+spring.datasource.url=jdbc:postgresql://localhost:5432/sellmate
+spring.datasource.password=springstudent
+spring.datasource.username=postgres
+spring.security.user.name=berk
+spring.security.user.password=cirak
 
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=f81bfa27c4e8a793f34a1b4956c1c8efsad8fsad689g9f3871
