--- a/sellmate/src/main/resources/application.properties
+++ b/sellmate/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+app.jwt.secret=${APP_SECRET_KEY}
+app.jwt.expiration-ms=${KEY_EXPIRATION}
