--- a/sellmate/src/main/resources/application.properties
+++ b/sellmate/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 app.jwt.secret=${APP_SECRET_KEY}
 app.jwt.expiration-ms=${KEY_EXPIRATION}
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
