--- a/sellmate/src/main/resources/application.properties
+++ b/sellmate/src/main/resources/application.properties
@@ -8,3 +8,13 @@ app.jwt.secret=${APP_SECRET_KEY}
 app.jwt.expiration-ms=${KEY_EXPIRATION}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smptp.auth=${MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE}
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
