--- a/sellmate/pom.xml
+++ b/sellmate/pom.xml
@@ -107,6 +107,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.projectreactor.netty</groupId>
+			<artifactId>reactor-netty</artifactId>
+			<version>1.1.18</version>
+		</dependency>
 	</dependencies>
 
 	<build>
